--- a/overview/architecture-core-concepts/system-architecture.mdx
+++ b/overview/architecture-core-concepts/system-architecture.mdx
@@ -1,141 +1,181 @@
 ---
 title: "System Architecture Overview"
-description: "Explains the major components of GoogleTest, including test macros, matchers, assertions, and the event/test runner lifecycle. Provides a high-level mermaid diagram showing flow from test definitions to execution and reporting, contextualizing user-facing features in the platform as a whole."
+description: "Explore how the core components of GoogleTest and GoogleMock work together: test runners, assertion engines, matchers, mocking facilities, and reporting. This overview provides a conceptual map that clarifies the toolkit's modular design and seamless integration."
 ---
 
 # System Architecture Overview
 
-## Introduction: Understanding GoogleTest Components
+Explore how the core components of GoogleTest and GoogleMock work in concert to provide a comprehensive C++ testing toolkit. This overview introduces the key building blocks — from test runners to assertion engines, matchers, mocking frameworks, and reporting facilities — and maps out their relationships to clarify the modular yet seamless design.
 
-In this section, you'll gain insight into the major components that power GoogleTest. This overview is designed to help you understand the user-facing features through the lens of their interplay—from the test code you write to how GoogleTest orchestrates execution and reporting.
+---
 
-Whether you are new or experienced, this guide clarifies how key elements like test macros, matchers, assertions, and the event/test runner lifecycle work together.
+## Understanding the Core Components
 
-## Major Components Explained
+GoogleTest and GoogleMock together provide an ecosystem enabling developers to write, run, and maintain robust unit tests and sophisticated mocks. This system architecture overview highlights the main components involved and explains how they collaborate to deliver value.
 
-### 1. Test Macros
+### Test Runners: Orchestrating Test Execution
 
-At the core of GoogleTest are its test macros, such as `TEST()` and `TEST_F()`. These macros provide a simple, declarative way to define tests and test fixtures:
+At the heart of GoogleTest is the **test runner**, the engine that discovers and runs all tests.
 
-- `TEST(TestSuiteName, TestName)`: Defines an independent test function, allowing you to verify specific functionality.
-- `TEST_F(TestFixture, TestName)`: Executes tests with a shared test fixture, enabling reuse of setup and teardown code across multiple tests.
+- **Discovery and Registration**: Tests are automatically registered via macros like `TEST()` and `TEST_F()` without extra bookkeeping.
+- **Execution Flow**: The test runner creates a fresh test fixture for each test, invokes setup/teardown routines, executes test code, and collects results.
+- **Flag Handling**: Initialization happens through `InitGoogleTest()`, parsing command-line flags to tweak behavior such as filtering, shuffling order, or enabling death tests.
 
-These macros automatically register tests with the framework, relieving you from manual bookkeeping.
+This design guarantees isolation between tests, enabling reliable, repeatable runs.
 
-### 2. Assertions
+### Assertion Engine: Verifying Expectations
 
-Assertions verify that your code behaves as expected. GoogleTest offers rich assertion macros:
+Assertions are the conditions you test in code. The assertion engine powers assertions by:
 
-- Fatal assertions (`ASSERT_*`): Abort the current test upon failure.
-- Nonfatal assertions (`EXPECT_*`): Log failure but continue execution.
+- Evaluating conditions in macros like `EXPECT_EQ`, `ASSERT_TRUE`, and custom predicates.
+- Differentiating between **fatal** failures that halt the current test immediately and **non-fatal** failures that allow continued checking.
+- Providing detailed diagnostics with file names, line numbers, and custom failure messages.
 
-This distinction allows you to decide if a failure should stop further testing or collect multiple failures within one test.
+This engine is robust, extensible, and provides comprehensive feedback to accelerate debugging.
 
-### 3. Matchers
+### Matchers: Precise and Expressive Condition Checks
 
-Matchers provide expressive ways to specify expected argument values in assertions and mocks. They can be simple, like matching exact values, or complex, involving patterns or user-defined predicates.
+Matchers are predicates applied in assertions that verify a wide range of conditions with rich expressiveness.
 
-Example:
-```cpp
-EXPECT_CALL(mockObject, Foo(Ge(5), NotNull()));
-```
-This expects that the `Foo()` method will be called with the first argument greater or equal to 5 and the second argument not null.
+- They simplify comparisons, e.g., `EXPECT_THAT(value, MatchesCondition())`.
+- Support basic comparisons, complex logical combinations, and custom user-defined conditions.
 
-### 4. Assertions Combined with Matchers
+Matchers let tests focus on intent instead of boilerplate checks.
 
-GoogleTest supports combined use of assertions and matchers allowing you to write expressive tests that are clear and maintainable. For instance, `EXPECT_THAT(value, matcher)` allows you to write expectations using custom predicates and matchers.
+### Mocking Facilities: Simulating Dependencies
 
-### 5. Event/Test Runner Lifecycle
+GoogleMock integrates tightly with GoogleTest to provide mocking capabilities:
 
-GoogleTest controls the test execution lifecycle through an event-driven test runner:
+- **Mock Objects** represent dependencies with programmable behavior.
+- **Actions and Expectations** let you specify what calls are expected, their parameters, and return values.
+- Thread-safe and compatible with GoogleTest’s lifecycle.
 
-- **Definition Phase:** Your test macros register test and fixture definitions before execution.
-- **Execution Phase:** The test runner executes registered tests, managing setup, teardown, and controlled sequencing.
-- **Reporting Phase:** Test results, including passed, failed, or skipped tests, are collected and reported with details.
+This subsystem empowers Test-Driven Development (TDD) and fine-grained unit testing of complex, interdependent code.
 
-This lifecycle ensures that tests run in isolation, enabling reliable and repeatable testing.
+### Reporting: Comprehensive Test Outcome Feedback
 
-## Visualizing GoogleTest Architecture
+After tests run, the reporting layer aggregates results:
 
-### High-Level Flow Diagram
+- Formats output summaries with pass/fail stats and detailed failure reports.
+- Supports multiple output formats (console, XML, JSON).
+- Integrates with CI/CD systems to facilitate automated testing and feedback loops.
+
+This layer ensures users get actionable insights immediately.
+
+---
+
+## How These Components Work Together
+
+This architecture is modular but tightly integrated for a fluent user experience.
 
 ```mermaid
 flowchart TD
-  A[Test Definitions] --> B[Test Registration]
-  B --> C[Test Discovery]
-  C --> D[Initialization]
-  D --> E[Test Execution]
-  E --> F[Assertions & Matchers]
-  E --> G[Event Listeners]
-  F --> H[Results Collection]
-  G --> H
-  H --> I[Reporting & Logging]
+
+  subgraph Test Execution
+    DiscoverTests[Test Discovery & Registration]
+    RunTests[Test Runner Execution]
+    Report[Reporting & Results Aggregation]
+  end
+
+  subgraph Validation
+    Assertions[Assertion Engine]
+    Matchers[Matchers]
+  end
+
+  subgraph Mocking[Mocking Support]
+    MockObjects[Mock Objects & Stubs]
+    Expectations[Actions & Expectations]
+  end
+
+  DiscoverTests --> RunTests
+  RunTests --> Assertions
+  Assertions --> Matchers
+  RunTests --> MockObjects
+  MockObjects --> Expectations
+  RunTests --> Report
+
+  %% Styling
+  classDef component fill:#f3f4f6,stroke:#333,stroke-width:1px,rounded;
+  class TestExecution,Validation,Mocking component;
 ```
 
-#### Component Breakdown
+**Narrative:**
 
-- **Test Definitions:** Your `TEST()` and `TEST_F()` statements define what to test.
-- **Test Registration:** The framework registers these tests internally.
-- **Test Discovery:** At runtime, tests are discovered automatically.
-- **Initialization:** Framework prepares the environment, parsing flags and setting prerequisites.
-- **Test Execution:** Each test runs independently, invoking your test logic.
-- **Assertions & Matchers:** Assertions ensure your code behaves as expected using matchers for detailed checks.
-- **Event Listeners:** Extensible user-defined hooks observe test progress.
-- **Results Collection:** Outcomes are tracked.
-- **Reporting & Logging:** Summaries and detailed logs are printed.
+1. **Test discovery** automatically collects all defined tests.
+2. The **test runner** executes each test, orchestrating creation of fixtures and executing user code.
+3. Assertions inside tests evaluate conditions using the assertion engine,
+   which leverages **matchers** for expressive checks.
+4. When tests involve mocked dependencies, the mocking subsystem handles interaction verification.
+5. Finally, results flow into the reporting engine for user-friendly output.
 
-## Practical Understanding Through User Flow
+---
 
-1. **Write tests using macros:** Define tests using `TEST()` or fixtures via `TEST_F()`.
-2. **Specify expectations:** Use assertions like `EXPECT_EQ()`, `EXPECT_TRUE()`, or custom matchers.
-3. **Build and run tests:** GoogleTest discovers and runs your tests, enforcing isolation and ordering guarantees.
-4. **Test runner manages lifecycle:** Setup, execution, teardown, and reporting are coordinated behind the scenes.
+## Practical Examples of the Architecture in Use
 
-## Tips and Best Practices
+### Writing and Running a Simple Test
 
-- Always use test macros to declare your tests—GoogleTest will manage registration and discovery.
-- Choose between `ASSERT_*` and `EXPECT_*` macros based on whether failures should halt the test.
-- Leverage matchers for concise and readable argument validation.
-- Structure tests with fixtures (`TEST_F`) when sharing setup/teardown logic.
-- Use event listeners to extend or customize testing behaviors (advanced).
+A developer writes simple assertions within a test method:
+
+```cpp
+TEST(FactorialTest, ComputesFactorials) {
+  EXPECT_EQ(Factorial(0), 1);
+  EXPECT_EQ(Factorial(5), 120);
+}
+```
+
+- The test runner registers and executes `ComputesFactorials`.
+- Assertions check the outputs.
+- On failure, detailed reports surface.
+
+### Mocking a Dependency
+
+To isolate the class under test, the user creates a mock class:
+
+```cpp
+class MockMailer : public Mailer {
+ public:
+  MOCK_METHOD(void, SendEmail, (const std::string&), (override));
+};
+
+TEST(NotificationTest, SendsEmailOnAlert) {
+  MockMailer mock;
+  EXPECT_CALL(mock, SendEmail("admin@example.com"));
+  NotificationSystem sys(&mock);
+  sys.TriggerAlert();
+}
+```
+
+- The mocking framework enforces expectations and integrates with test runner execution and assertion reporting.
+
+---
+
+## Best Practices and Tips
+
+- **Use `RUN_ALL_TESTS()` once per program:** This ensures tests are discovered and run with lifecycle managed correctly.
+- **Prefer `EXPECT_` macros for non-fatal failures:** It surfaces multiple issues in one run.
+- **Group related tests in test suites for clarity and maintainability.**
+- **Use fixtures (`TEST_F`) when multiple tests share state or setup.**
+- **Use mocks to isolate external dependencies but avoid over-mocking, which can hamper test readability.**
+
+---
 
 ## Troubleshooting Common Issues
 
-| Symptom                                  | Cause                               | Solution                                  |
-|------------------------------------------|-----------------------------------|-------------------------------------------|
-| Tests not discovered or run               | Incorrect macro usage or missing   | Ensure proper use of `TEST()` and         |
-|                                          | registration                      | `TEST_F()`. Ensure `RUN_ALL_TESTS()` is   |
-|                                          |                                   | called.                                   |
-| Assertion failures without detailed info | Using generic assertions or missing| Use expressive assertions and enable      |
-|                                          | matcher details                   | verbose output flags if needed.            |
-| Tests run out-of-order or interleaved    | Misunderstanding on test isolation | Each test runs in isolation; use sequences|
-|                                          | behavior                        | or event listeners to control order.       |
-
-## Summary
-
-This page detailed how GoogleTest is architected from the user's standpoint:
-- How **test macros** enable test declaration and registration.
-- The role of **assertions and matchers** in specifying expected behavior.
-- Overview of the **event-driven lifecycle** managing test discovery, execution, and reporting.
-- Illustrated user flow from test definition to reporting.
-
-By understanding this architecture, you know how to interact effectively with GoogleTest's key components and troubleshoot common issues.
+- **Tests not running or discovered?** Double-check registration macros and ensure `RUN_ALL_TESTS()` is called.
+- **Unexpected failures or flaky tests?** Isolate tests, check for shared static/global states.
+- **Build/link errors on integration?** Ensure GoogleTest and GoogleMock are properly linked and compiled with compatible compiler flags.
 
 ---
 
-## Related Links
+## Next Steps
 
-- [Test Macros and Test Registration](/api-reference/core-apis/test-macros)
-- [Assertions and Predicate Macros](/api-reference/core-apis/assertions)
-- [Matchers](/api-reference/core-apis/matchers)
-- [Mock Class APIs and Expectations](/api-reference/core-apis/mocking-basics)
-- [Core Features & Product Benefits](/overview/introducing-googletest/core-features-benefits)
-- [Mocking Reference](../docs/reference/mocking.md)
+To dive deeper:
+
+- Review the [Core Concepts & Terminology](/overview/architecture-core-concepts/core-terminology) to understand essential GoogleTest terminology.
+- Explore the [Architecture Diagram](/overview/architecture-core-concepts/architecture-diagram) for a visual system architecture.
+- Begin practical use by following the [GoogleTest Primer](/overview/introduction-value/what-is-googletest) and learning to write your first tests.
+
 
 ---
 
-**Next Steps:**
-- Begin writing your first test with GoogleTest macros.
-- Explore assertions and matchers to make expressive tests.
-- See the test runner integration page to understand how to invoke tests programmatically.
-- Use the mocking reference for advanced mock object creations.
+*For detailed compiler and build system integration, refer to the [GoogleTest CMake build instructions](https://github.com/google/googletest/blob/main/googletest/README.md) and [pkg-config usage guide](../../docs/pkgconfig.md).*
