--- a/overview/features-integration/integration-ecosystem.mdx
+++ b/overview/features-integration/integration-ecosystem.mdx
@@ -1,185 +1,157 @@
 ---
-title: "Ecosystem & Build Integration"
-description: "Highlight how GoogleTest and GoogleMock integrate with different build environments, CI systems, and popular extensions or adapters (VS Code, TAP, parallel runners, etc.). Point out support for CMake, Bazel, and other modern workflows for seamless onboarding in diverse projects."
+title: "Integration & Ecosystem"
+description: "Learn how GoogleTest integrates with build systems (CMake, Bazel), CI pipelines, the Abseil library, IDE plugins, and third-party test runners or adapters. Real-world projects like Chromium, LLVM, and OpenCV demonstrate proven, large-scale adoption."
 ---
 
-# Ecosystem & Build Integration
+# Integration & Ecosystem
 
-## Seamless Integration With Your Build and Test Environment
+Discover how GoogleTest seamlessly integrates into your existing development workflows, build environments, and testing infrastructure. This page guides you through the various integration points GoogleTest supports—from popular build systems and CI pipelines to complementary libraries and tools—backed by real-world examples demonstrating robust, large-scale adoption.
 
-GoogleTest and GoogleMock are designed to blend effortlessly into modern C++ development workflows. Whether you are working on a small project or a large, complex codebase, they support your preferred build systems, continuous integration setups, and essential developer tools to ensure smooth onboarding and productivity.
+---
 
-### Supported Build Systems
+## Why Integration Matters
 
-- **CMake:** Fully supported with provided build scripts and exemplary integration patterns. GoogleTest and GoogleMock can be either built as standalone projects or included as subdirectories within your own CMake build, preserving compiler and linker consistency.
+In modern C++ development, automated testing is an ecosystem effort involving build tools, test runners, continuous integration (CI), and IDE support. GoogleTest's thoughtful integration with these components ensures you will spend less time configuring and more time focusing on writing reliable tests.
 
-- **Bazel:** Native support exists to incorporate GoogleTest and GoogleMock as dependencies, enabling you to leverage Bazel’s caching and parallelism for efficient test builds.
+Integration simplifies running your tests as part of daily builds, enables smooth interaction with your IDE, and lets you leverage third-party tools. This means faster feedback cycles, higher code quality, and reduced manual effort.
 
-- **Manual and Custom Builds:** If your project does not follow CMake or Bazel, GoogleTest supports manual compilation and integration using source files directly. This flexibility allows compatibility with a variety of legacy or bespoke build systems.
+---
 
+## Supported Build Systems
 
-<Tip>
-For CMake integration, you can use `FetchContent` to download and incorporate GoogleTest automatically, ensuring that the testing framework and your project share the same compiler settings and environment.
-</Tip>
+### CMake Integration
 
-### Continuous Integration (CI) Compatibility
+GoogleTest is fully compatible with CMake, the de facto standard cross-platform build system. Incorporate GoogleTest into your project easily:
 
-GoogleTest and GoogleMock integrate naturally with CI pipelines.
+- Use `FetchContent` or `add_subdirectory()` to include GoogleTest source.
+- Link against targets `gtest` and `gtest_main` for test executables.
+- Benefit from compile-time and link-time consistency ensuring your tests build correctly alongside your project.
 
-- Runners easily execute tests discovered automatically by GoogleTest.
-- Test outputs are clean and structured, facilitating automated test result parsing.
-- GoogleTest includes command-line flags to control verbosity, isolate flaky tests, and adjust failure behaviors in a CI context.
-
-
-### Language and Platform Portability
-
-GoogleTest supports C++17 or later, ensuring compatibility with modern standards. Platform portability macros and build flexibility ensure your tests work across desktop OSes, embedded environments, and even constrained platforms when properly configured.
-
-
-## Popular Extensions and Adapters
-
-To extend GoogleTest’s reach and interoperate smoothly with tools developers love, several extensions and adapters exist:
-
-- **Visual Studio Code:** Integration plugins offer test discovery, inline test status, and navigation.
-
-- **TAP Format:** Test Anything Protocol (TAP) adapters exist to emit test results in a standardized format, helping integrate with external test harnesses.
-
-- **Parallel Test Runners:** Support for parallel test execution is available, either via GoogleTest’s own sharding mechanisms or external runners, enabling faster feedback loops.
-
-
-### Typical User Flow for Build Integration
-
-1. **Select your build system:** Choose between CMake, Bazel, or other supported environments.
-2. **Incorporate GoogleTest/GoogleMock:** Use submodule, subdirectory, or package manager tools to add GoogleTest sources.
-3. **Configure your targets:** Link your test executables against GoogleTest and GoogleMock libraries.
-4. **Run tests:** Execute tests with auto-discovery by GoogleTest, optionally using test filters and command-line options.
-5. **Integrate with CI:** Set up automated triggers to run your tests on push or pull request.
-
-
-## Practical Examples
-
-### Example: Adding GoogleTest to a CMake Project
+**Example snippet to add GoogleTest in your `CMakeLists.txt`:**
 
 ```cmake
 include(FetchContent)
 FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-)
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    googletest
+    URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(my_tests test_main.cpp)
-target_link_libraries(my_tests GTest::gtest_main GTest::gmock_main)
+add_executable(my_tests test1.cpp test2.cpp)
+target_link_libraries(my_tests gtest_main)
 add_test(NAME my_tests COMMAND my_tests)
 ```
 
-This configuration lets you build GoogleTest and GoogleMock as part of your project, linking and running tests seamlessly.
+This setup automatically downloads, configures, and builds GoogleTest with your code.
 
-### Example: Running Tests in Parallel Using Sharding
+### Bazel Support
 
-GoogleTest supports test sharding to distribute tests across processes or machines.
+GoogleTest works smoothly with Bazel, Google's own build system used in many large-scale projects (e.g., Chromium, LLVM). Bazel provides first-class support for test targets.
 
-```bash
-# Run tests shard 1 of 3.
-./my_tests --gtest_shard_index=0 --gtest_total_shards=3
+Typical workflow:
 
-# Run tests shard 2 of 3.
-./my_tests --gtest_shard_index=1 --gtest_total_shards=3
+- Declare GoogleTest as an external dependency.
+- Define test targets with `cc_test` rules referencing your test sources.
+- Bazel handles compilation, linking, and test execution with GoogleTest seamlessly.
 
-# Run tests shard 3 of 3.
-./my_tests --gtest_shard_index=2 --gtest_total_shards=3
-```
-
-This enables faster test execution in parallel CI environments or locally on multicore machines.
-
-
-## Tips and Best Practices
-
-- **Prefer declarative build integration:** Adding GoogleTest as a subdirectory or using `find_package` ensures better compatibility and maintenance.
-- **Use `gtest_force_shared_crt` on Windows:** Prevents runtime conflicts related to dynamic versus static C runtimes.
-- **Set C++ standard in your build:** GoogleTest needs at least C++17; ensure your project reflects this.
-- **Silence uninteresting call warnings selectively:** Based on your test strategy, use NiceMocks or appropriate `EXPECT_CALL` to manage mock behaviors.
-- **Leverage test filtering:** Use GoogleTest flags to run subsets of tests during development or CI.
-
-
-## Troubleshooting Common Build Integration Issues
-
-<AccordionGroup title="Common Issues">  
-<Accordion title="Linker Errors When Using Visual Studio">  
-**Problem:** Linker error due to runtime library mismatch (`MTd_StaticDebug` vs `MDd_DynamicDebug`).
-
-**Solution:** Enable the CMake option `gtest_force_shared_crt` to match project's Crt linkage.
-
-```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-```
-
-This harmonizes the C runtime library linkage between GoogleTest and your project.
-</Accordion>  
-<Accordion title="Tests Not Discovered or Executed">  
-**Problem:** Tests appear to build but are not running or found.
-
-**Solution:** Verify that your test binary links against `GTest::gtest_main` or provides a `main()` that calls `RUN_ALL_TESTS()`.
-
-Also check command-line options for test filters that may skip all tests.
-</Accordion>  
-<Accordion title="Wrong Compiler Standard or Flags">  
-**Problem:** Build fails due to unsupported C++ features or conflicting options.
-
-**Solution:** Ensure your compiler uses at least C++17. In CMake, set:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-Check that your project's flags are consistent, especially when integrating GoogleTest as a subproject.
-</Accordion>  
-</AccordionGroup>
-
-
-## How GoogleTest and GoogleMock Fit in the Ecosystem
-
-```mermaid
-graph TD
-  BuildSystemCMake["Build System: CMake"]
-  BuildSystemBazel["Build System: Bazel"]
-  CustomBuild["Custom/Manual Build"]
-
-  GoogleTestLib["GoogleTest & GoogleMock"]
-  TestExecutables["User Test Executables"]
-  CIEnvironment["Continuous Integration Systems"]
-  DeveloperTools["Developer Tools & Extensions"]
-
-  BuildSystemCMake -->|Integrate| GoogleTestLib
-  BuildSystemBazel -->|Integrate| GoogleTestLib
-  CustomBuild -->|Link Against| GoogleTestLib
-
-  GoogleTestLib -->|Link| TestExecutables
-  TestExecutables -->|Run Tests & Produce Reports| CIEnvironment
-
-  DeveloperTools -->|Extensions| TestExecutables
-  DeveloperTools -->|Editors/IDEs| TestExecutables
-
-  style GoogleTestLib fill:#f9f,stroke:#333,stroke-width:2px
-  style CIEnvironment fill:#bbf,stroke:#333,stroke-width:2px
-  style DeveloperTools fill:#bfb,stroke:#333,stroke-width:2px
-```
-
-
-## Next Steps
-
-- Visit [Installation with CMake](/getting-started/prerequisites-installation/installation-cmake) for a detailed walkthrough.
-- Explore [Installation with Bazel](/getting-started/prerequisites-installation/installation-bazel) if using Bazel.
-- Review [Basic Configuration & Project Setup](/getting-started/configuration-first-test/basic-configuration) to configure your test environment after integrating the framework.
-- Consult [Solving Common Setup Problems](/getting-started/troubleshooting/common-errors) if you encounter difficulties integrating the test framework.
-
+This integration unlocks robust reproducibility, incremental builds, and fine-grained test selection.
 
 ---
 
-*For richer understanding of GoogleMock’s usage, consider reading the [Mocking Reference](reference/mocking.md) and [gMock for Dummies](gmock_for_dummies.md).*
+## Continuous Integration (CI) Pipeline Integration
 
-<Check>
-To optimize your integration experience, ensure your C++ environment supports at least C++17 and prefer the official build integration methods targeting CMake or Bazel.
-</Check>
+GoogleTest fits naturally into modern CI pipelines to automate your quality assurance.
+
+- Most CI systems recognize GoogleTest output format or can be configured to parse it.
+- It supports custom XML output via the `--gtest_output=xml` flag, enabling tools like Jenkins and GitLab to generate test reports.
+- You can configure CI jobs to run `RUN_ALL_TESTS()` as part of build verification steps, ensuring failures block merges.
+
+By integrating GoogleTest in CI, teams catch regressions early, enforce coverage standards, and maintain high reliability.
+
+---
+
+## Ecosystem Components
+
+### Abseil Library
+
+GoogleTest has integration with the Abseil C++ common libraries, sharing utility components and enhancing compatibility. Using Abseil alongside GoogleTest provides a consistent foundation for utilities like string handling, time, and synchronization primitives.
+
+### IDE Plugins
+
+Many IDEs feature plugins or built-in support for GoogleTest:
+
+- **Visual Studio:** Has native test adapter support for discovering and running GoogleTest tests.
+- **CLion & JetBrains IDEs:** Support GoogleTest discovery and interactive running.
+- **VSCode:** Extensions exist for GoogleTest integration, allowing inline test results and easy navigation.
+
+IDE integration speeds up development and debugging by embedding test feedback directly into your coding environment.
+
+### Third-Party Test Runners and Adapters
+
+GoogleTest output can be consumed by numerous third-party tools:
+
+- Test adapters to integrate with other testing frameworks.
+- Report generators that transform XML output into dashboards.
+- Continuous delivery tools that gate deployments on test success.
+
+The rich ecosystem means you can customize your toolchain while keeping GoogleTest at its core.
+
+---
+
+## Proven Adoption in Large-Scale Projects
+
+GoogleTest powers testing in major open-source projects, illustrating its scalability and reliability:
+
+- **Chromium:** Google’s browser project extensively uses GoogleTest in millions of tests.
+- **LLVM:** Compiler infrastructure harnesses GoogleTest for unit and integration tests.
+- **OpenCV:** Popular computer vision library leverages GoogleTest for its broad test coverage.
+
+This track record confirms GoogleTest’s ability to thrive in complex, performance-critical environments.
+
+---
+
+## Getting Started with Integration
+
+To begin integrating GoogleTest into your development ecosystem:
+
+<Steps>
+<Step title="Choose your build system">
+Select CMake, Bazel, or your preferred system and follow official guides to incorporate GoogleTest.
+</Step>
+<Step title="Configure CI pipeline">
+Add test execution steps running GoogleTest, capturing output, and reporting results.
+</Step>
+<Step title="Set up IDE integration">
+Install appropriate plugins or configure your IDE to discover and run GoogleTest tests.
+</Step>
+</Steps>
+
+For detailed, step-by-step instructions, visit relevant build system documentation or the Getting Started guide.
+
+---
+
+## Troubleshooting Tips
+
+- **Build failures:** Ensure your build system points to correct GoogleTest headers and libraries.
+- **Tests not running in CI:** Verify test discovery uses the correct executable and flags.
+- **IDE test discovery issues:** Confirm the test binary is built with debug symbols and supported extensions.
+
+If issues persist, consult the [Getting Started Setup and Installation](/getting-started/setup-overview) and [Troubleshooting & Verification](/getting-started/troubleshooting-and-validation) documentation for guided assistance.
+
+---
+
+GoogleTest’s extensive ecosystem and integrations reduce friction in adopting robust C++ testing practices, empowering your team with automated, reliable, and efficient testing flows.
+
+---
+
+### Related Documentation
+
+- [GoogleTest Primer](primer.md) — Learn the basics of writing tests.
+- [Feature Overview](overview/features-integration/feature-overview) — High-level examination of GoogleTest features.
+- [Integration with Build Systems](guides/integration-and-patterns/build-system-integration) — Deep dive into build tool integration.
+- [Mocking Reference](reference/mocking.md) — Details on GoogleMock integration.
+
+---
+
+<Info>
+For detailed build system integration examples, see the [googletest/README.md](https://github.com/google/googletest) and Google's official CMake and Bazel documentation.
+</Info>
